
20041021: New indicator plugin SYMBOL. This allows user to overlay a plot of the close
          of any symbol (ticker) onto any indicator.
	  
20041021: Removed the OVRLY indicator. Now redundant due to the SYMBOL plugin and
          CUS language functions.
	  
20041025: Fixed bug in MATH::MIN/MAX that didn't include the current bar in the calculation.
          Current bar is now included.
	  	  	 

0.28
====

20041002: Changed quotes dialog back to modal to fix segfaults.

20041007: Fixed rule parsing error in CSV quote plugin.


0.27
====

20040614: applied patch #972357 - new indicator VFI. Thanks to Xiaoguang Zhang.

20040615: applied patch #972868,972870 - VFI and Tester exit changes. Thanks to Xiaoguang Zhang.

20040615: fixed bug #972949 - yahoo Y2K bug. qtstalker was assuming any dates <1950 was a 
          21st century date. The yahoo history data only goes back to 1930, so cutoff date
	  is changed to anything before 1930 will be considered a 21st century date.
	    
20040620: fixed bug in WMA that causes a segfault. period was off by one for second loop.

20040621: fixed bug in BB that switched labels for upper and lower bands.

20040622: fixed bug #976814 in EMA logic that applied smoothing factor to the first value. now just a plain
          SMA value unsmoothed.
	  
20040622: changed Tester:: class to non-modal dialog for multiple instances. testing needed.

20040624: fixed bug in MOM, ROC, SD indicators that plots a blank chart.

20040624: fixed bugs in OVRLY indicator that displayed erratic behaviour.

20040626: fixed bug that didn't restore stacked indicators space defaults on startup. now it
          restores the default size of 75.
	  
20040628: fixed bug in PP indicator that didn't save linetype correctly.

20040704: New indicator plugin CUS. This allows the user to create custom indicator
          formulas. See DOCS for more info on usage.
	  
20040706: Changed the navigator gui from tabs to small buttons. Having to page back and forth